# EGovernanceProject

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
governance/: asgi.py  settings.py  urls.py  wsgi.py
governance/static/: custom.css  styles.min.css
governance/templates/: base.html
services/: admin.py  choices.py  forms.py  models.py  urls.py  validatorExpressions.py  views.py
services/migrations/: 0001_initial.py  0002_passport_date_of_application.py  0003_alter_document_passport.py  0004_passport_remark.py  0005_alter_document_voter_id_alter_passport_pan.py
services/ponicode/: views_test.py
services/templates/services/: about.html  approveapplication.html  contact.html  dashboard.html  documentupload.html  home.html  passportapplication.html  preview_application.html
